# 20250224jpmc-am

./: card.py  carddeck.py  create_knights_xml.py  deco_fun.py  iter_fun.py  jokerdeck.py  knights.xml  logdeco.py  read_knights_xml.py  simple_classes.py  use_logdeco.py  wombat.py
ANSWERS/: noaa_precip.py
DATA/: presidents.db
EXAMPLES/: db_sqlite_basics.py  db_sqlite_delete_row.py  db_sqlite_parameterized.py  inspect_ex.py  json_custom_encoding.py  randomword.py  rest_consumer_omdb.py  rest_consumer_omdb_sessions.py
EXAMPLES/flask_examples/: flask_hello.py  flask_hello_template.py  jinja2_inheritance.py
EXAMPLES/flask_examples/templates/: flask_hello.html
EXAMPLES/hamlib/src/hamlib.egg-info/: PKG-INFO
EXAMPLES/spamlib/src/spamlib/: spam.py
EXAMPLES/spamlib/src/spamlib.egg-info/: PKG-INFO
EXAMPLES/tests/: conftest.py  pytest.ini  test_builtin_fixtures.py  test_mark.py  test_mock.py  test_parametrization.py  test_simple.py  test_simple_fixture.py  test_skip.py
dogs/: README.md  pyproject.toml
dogs/docs/source/: conf.py  index.rst
dogs/src/: dogs.py
dogs/tests/: test_dogs.py
