[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# the above is always required

[project]
name = "dogs"
version = "1.0.0"
authors = [
    { name="John Strickler", email="john.strickler@triveratech.com" },
]
description = "A celebration of furry friends"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
#    'roman >= 3.0',
]




